@@ -1,3 +1,11 @@
+2011-01-26  Shujing Zhao  <pearly.zhao@oracle.com>
+
+	* libdtrace/makefile (signal.d): Exchange the line of SIGCLD and
+	SIGCHLD, SIGPOLL and SIGIO.
+	(install): Install errno.d regs.d signal.d unistd.d to the
+	/usr/lib/dtrace.
+	* libdtrace/i386/regs.sed.in: Remove @.
+
 2011-01-21  Shujing Zhao  <pearly.zhao@oracle.com>
 
 	* libdtrace/dt_open.c: Fix the directory of _dtrace_defcpp.
